# pyo3-examples

./: .gitignore  Cargo.toml  LICENCE.md  README.md  performance.py  pyproject.toml  setup.cfg
poetry_rust_integration/: __init__.py  __init__.pyi  python_impl.py
pyo3_examples/: __init__.py  __init__.pyi  _pyo3_examples.pyi  performance.py  python_impl.py
src/: collatz.rs  decorator.rs  enums.rs  fibonacci.rs  lib.rs  managed_resource.rs  module.rs  primes.rs  registry.rs
test/: test_collatz.py  test_context_manager.py  test_decorator.py  test_enum.py  test_primes.py
tests/: test_collatz.py  test_context_manager.py  test_decorator.py  test_fibonacci.py  test_init_subclass.py  test_primes.py
