[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyo3-examples"
version = "0.1.0"
authors = [
  { name="Andrew Smith", email="andrew@friarswood.net" },
]
license = {file = "LICENCE.md"}
description = "Examples of pyo3/rust implementations of python constructs"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas",
  "tabulate"
]

[project.scripts]
perf-test = "pyo3_examples.performance:main"

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "pytest>=7.1.3",
  "maturin",
  "mypy>=1.5.0",
  "mypy-extensions>=1.0.0",
  "ruff",
]


[project.urls]
"Homepage" = "https://github.com/virgesmith/pyo3-examples"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test"
]

[tool.ruff]
lint.select = ["E", "F"]
lint.ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]