[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyo3-examples"
version = "0.1.1"
authors = [
  { name="Andrew Smith", email="andrew@friarswood.net" },
]
license = {file = "LICENCE.md"}
description = "Examples of pyo3/rust implementations of python constructs"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas",
  "tabulate"
]

[project.scripts]
perf-test = "pyo3_examples.performance:main"

[dependency-groups]
dev = [
  "pytest>=9.1.0",
  "maturin>=1.14.0",
  "ruff>=0.15.17",
  "ty>=0.0.49",
]


[project.urls]
"Homepage" = "https://github.com/virgesmith/pyo3-examples"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test"
]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["ANN201", "ANN401", "COM812", "D", "E501", "EM101", "FIX", "ISC001",
  "N818", "PLR2004", "PT011", "PT018", "S101", "S311", "T201", "TD", "TRY"]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]